[gd_scene load_steps=3 format=3 uid="uid://tubkm8lxn1er"]

[ext_resource type="Script" path="res://SCENE/Main/main.gd" id="1_yci0e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgvh6"]
bg_color = Color(0.200056, 0.0550167, 0.425671, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yci0e")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sgvh6")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TextEdit" type="TextEdit" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 450)
layout_mode = 2
theme_override_colors/background_color = Color(0.0524921, 0.00710418, 0.147627, 1)

[node name="Btn_list_HBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="btn_open_file" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer"]
self_modulate = Color(0.995763, 0.744445, 0.232538, 1)
layout_mode = 2
text = "Открыть файл"

[node name="btn_save_file" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer"]
modulate = Color(0.996078, 0.745098, 0.231373, 1)
layout_mode = 2
text = "Сохранить"

[node name="btn_save_how_file" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer"]
modulate = Color(0.996078, 0.745098, 0.231373, 1)
layout_mode = 2
text = "Сохранить как"

[node name="btn_clear_text" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer"]
modulate = Color(0.996078, 0.745098, 0.231373, 1)
layout_mode = 2
text = "Очистить поле"

[node name="Dialogs" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="FD_open_file" type="FileDialog" parent="Dialogs"]
title = "Open a File"
position = Vector2i(120, 120)
size = Vector2i(400, 400)
min_size = Vector2i(400, 300)
ok_button_text = "Open"
cancel_button_text = "Закрыть"
file_mode = 0
access = 2

[node name="FD_save_file" type="FileDialog" parent="Dialogs"]
auto_translate_mode = 1
title = "Сохранить файл"
position = Vector2i(120, 120)
size = Vector2i(400, 400)
ok_button_text = "Сохранить"
cancel_button_text = "Закрыть"
access = 2

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer/btn_open_file" to="." method="_on_btn_open_file_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer/btn_save_file" to="." method="_on_btn_save_file_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer/btn_save_how_file" to="." method="_on_btn_save_how_file_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Btn_list_HBoxContainer/btn_clear_text" to="." method="_on_btn_clear_text_pressed"]
[connection signal="file_selected" from="Dialogs/FD_open_file" to="." method="_on_fd_open_file_file_selected"]
[connection signal="file_selected" from="Dialogs/FD_save_file" to="." method="_on_fd_save_file_file_selected"]
